Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,44 +1,12 @@
 ---
 title: "Welcome to Funtend"
-description: "Welcome to the home of your new documentation"
+description: "Design Your Style, Own Your Fashion"
 ---
 
-<img alt="Hero Light" classname="block dark:hidden" src="/images/hero-light.png" />
+<img alt="Funtend Banner" classname="hidden dark:block" src="/images/large-social-banner.png" />
 
-<img alt="Hero Dark" classname="hidden dark:block" src="/images/hero-dark.png" />
+[Funtend](https://funtend.xyz) is transforming the streetwear industry by integrating AI-generated fashion design, NFT-based digital ownership, and decentralized social commerce. Built on **Polygon PoS**, our protocol enables users to design unique streetwear using machine-learning-driven generative AI, mint these designs as NFTs with on-chain metadata, and redeem them for NFC-embedded apparel that links back to the blockchain for provenance and authenticity.
 
-## Setting up
+The $185B streetwear industry suffers from mass production waste, counterfeiting, and limited personalization. Funtend addresses these inefficiencies with on-chain verifiable fashion assets, fractional ownership models for co-created designs, and a DAO-governed royalty structure for designers.
 
-The first step to world-class documentation is setting up your editing environments.
-
-<CardGroup cols={2}>
-  <Card title="Edit Your Docs" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
-    Get your docs set up locally for easy development
-  </Card>
-
-  <Card title="Preview Changes" icon="image" href="https://mintlify.com/docs/development">
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
-    Customize your docs to your company's colors and brands
-  </Card>
-
-  <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-
-  <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/content/components/accordions">
-    Build interactive features and designs to guide your users
-  </Card>
-
-  <Card title="Get Inspiration" icon="stars" href="https://mintlify.com/customers">
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+Our AI stack leverages GANs and diffusion models fine-tuned for textile pattern generation, while our smart contracts utilize **ERC-6551** (Token Bound Accounts) and **PBT** (Physical Backed Tokens) to enable digital-physical interoperability. We integrate Lens Protocol V2 for decentralized social engagement, incentivizing creators via on-chain reputation scoring and tokenized rewards.
