Update tokenomics page

--- a/introduction/tokenomics.mdx
+++ b/introduction/tokenomics.mdx
@@ -2,3 +2,98 @@
 title: 'Tokenomics'
 description: 'Funtend is pre-TGE, there is no launched token you can buy yet'
 ---
+
+## **🔹 Funtend Tokenomics Plan ($FNTD) 🚀**  
+
+A well-structured tokenomics model ensures **sustainability, user incentives, and long-term value creation**. Below is the best tokenomics plan for **$FNTD**, considering both on-chain and off-chain revenue models, ecosystem growth, and incentives for creators, brands, and users.  
+
+---
+
+## **1️⃣ Token Overview**  
+
+- **Token Name:** Funtend  
+- **Ticker:** $FNTD  
+- **Blockchain:** Polygon (Ethereum L2)  
+- **Total Supply:** **1,000,000,000 $FNTD (fixed, no minting after TGE)**  
+- **Token Type:** Utility & Governance  
+- **Contract Standard:** ERC-20  
+
+---
+
+## **2️⃣ Utility of $FNTD**  
+
+🔹 **Payments:**  
+- Purchase digital & physical streetwear on the Funtend marketplace.  
+- Pay for AI-generated design tools & customization.  
+
+🔹 **Governance:**  
+- $FNTD holders **vote on new collections, collaborations, and roadmap decisions**.  
+- Community-driven fashion trends via DAO voting.  
+
+🔹 **Staking & Rewards:**  
+- Users stake $FNTD to **access premium features** (AI enhancements, exclusive designs).  
+- Designers stake $FNTD to **boost their collections’ visibility**.  
+
+🔹 **Royalty & Creator Economy:**  
+- **Smart contract royalties** auto-distribute $FNTD to designers on resale.  
+- Influencers earn $FNTD **through affiliate marketing & content engagement**.  
+
+🔹 **Sustainability Incentives:**  
+- Users **return old apparel for on-chain recycling rewards**.  
+- Earn $FNTD for eco-friendly actions (e.g., choosing sustainable materials).  
+
+🔹 **Metaverse & Interoperability:**  
+- NFT-linked fashion assets work across **Decentraland, Sandbox, Lens Protocol & AR filters**.  
+
+---
+
+## **3️⃣ Token Allocation & Vesting**  
+
+| **Category**          | **% Allocation** | **Amount** | **Vesting Period** |
+|----------------------|---------------|----------------|----------------|
+| **Community & Ecosystem** | 40% | 400,000,000 $FNTD | Unlocks over 5 years (2-year cliff) |
+| **Team & Advisors** | 15% | 150,000,000 $FNTD | 1-year cliff, 4-year vesting |
+| **Investors (Seed, Private, Public Rounds)** | 20% | 200,000,000 $FNTD | 6-month cliff, 2-year vesting |
+| **Liquidity & Market Making** | 10% | 100,000,000 $FNTD | Instant access for exchange listings |
+| **Partnerships & Strategic Growth** | 10% | 100,000,000 $FNTD | Unlocks over 4 years |
+| **Treasury & Reserve** | 5% | 50,000,000 $FNTD | Used for long-term sustainability |
+
+✅ **No team/investor dumping:** Vesting schedules ensure long-term commitment.  
+
+---
+
+## **4️⃣ Revenue Model (On-Chain & Off-Chain)**  
+
+### **🔹 On-Chain Revenue Streams**
+- **Marketplace Fees (2-5%)** on every NFT streetwear transaction.  
+- **AI Tool Subscriptions:** Pay-per-use or premium plans in $FNTD.  
+- **Staking & Memberships:** Users and brands stake $FNTD for premium access.  
+- **Brand Collaborations:** Web3-native brands pay to launch limited-edition collabs.  
+
+### **🔹 Off-Chain Revenue Streams**
+- **Physical Fashion Sales:** Hybrid Web3-native apparel purchases.  
+- **NFC-Enabled Authentication:** Brands integrate Funtend’s NFC-chip for product verification.  
+- **Retail Partnerships:** Funtend-powered Web3 stores in real-world retail locations.  
+
+---
+
+## **5️⃣ Token Burning & Deflationary Mechanics**  
+- **10% of all marketplace fees go to burning** $FNTD to control inflation.  
+- Recycling programs **lock tokens in a sustainability fund** to reward eco-friendly behavior.  
+- **Dynamic buyback mechanism** using a portion of revenue to stabilize the token economy.  
+
+---
+
+## **6️⃣ Partnership & Growth Strategy**  
+🔹 **Web3 Partnerships:** Lens Protocol, Polygon Studios, Chainlink, The Sandbox, Decentraland.  
+🔹 **Traditional Fashion Collaborations:** Indie designers, sustainable brands, Web2 streetwear brands integrating Web3 authentication.  
+🔹 **SocialFi & Content Strategy:** Creators earn from user engagement, incentivizing organic marketing.  
+
+---
+
+## **7️⃣ Long-Term Vision & Token Value Growth**  
+✅ **Year 1:** Build traction with early adopters, Web3-native designers, and NFT streetwear collectors.  
+✅ **Year 2-3:** Expand to mainstream streetwear brands, integrate with AR/Metaverse platforms, and scale marketplace adoption.  
+✅ **Year 4+:** Mass adoption via real-world retail integrations, Web3-native global fashion week events, and ecosystem expansion.  
+
+---
