--- a/introduction/ecosystem-strategy.mdx
+++ b/introduction/ecosystem-strategy.mdx
@@ -106,9 +106,9 @@ Funtend is **designed to work across multiple blockchain networks & metaverse pl
 
 | **Phase**  | **Ecosystem Expansion Focus** |
 |------------|------------------------------|
-| **Phase 1 (2024 Q1 - Q2)**  | Launch AI-powered fashion design tools, NFT marketplace, and NFC-integrated apparel.  |
-| **Phase 2 (2024 Q3 - Q4)**  | Integrate with metaverse platforms & expand wear-to-earn incentives.  |
-| **Phase 3 (2025)**  | Enable cross-chain NFT trading, DeFi integration, and Web3 brand partnerships.  |
+| **Phase 1 (2025 Q1 - Q2)**  | Launch AI-powered fashion design tools, NFT marketplace, and NFC-integrated apparel.  |
+| **Phase 2 (2025 Q3)**  | Integrate with metaverse platforms & expand wear-to-earn incentives.  |
+| **Phase 3 (2025 04)**  | Enable cross-chain NFT trading, DeFi integration, and Web3 brand partnerships.  |
 | **Phase 4 (2026 & Beyond)**  | Build **full-scale Web3-native fashion retail stores** and explore **global adoption**.  |
 
 ---
