Fix formatting inconsistencies in ecosystem strategy documentation

--- a/platform/ecosystem-strategy.mdx
+++ b/platform/ecosystem-strategy.mdx
@@ -6,14 +6,14 @@ description: 'Funtend is building a modular and scalable creator-commerce ecosys
 Funtend’s strategy centers around creating a self-sustaining, interoperable, and community-driven ecosystem that blends fashion, blockchain, and AI. We approach this through layered systems that grow together—from creation tools to resale markets, community rewards, and protocol-level utility.
 
 1. **Multi-Stakeholder Architecture** \
-  Our ecosystem supports three key actors:
+  Our ecosystem supports three key actors: \
   - **Creators**: Use AI tools to design collections, mint fashion NFTs, and earn from drops and royalties.
   - **Collectors/Buyers**: Purchase limited items, verify authenticity with NFC, and participate in gamified rewards.
   - **Curators/Communities**: Discover, promote, and co-create with their favorite designers—earning **$FNTD** in the process.
 
 2. **Protocol & Platform Duality** \
-  Funtend operates on two levels:
-  - **The Platform (App Layer)**: A user-friendly interface for minting, selling, and browsing NFT-backed fashion drops.
+  Funtend operates on two levels: \
+  - **The Platform (App Layer)**: A user-friendly interface for minting, selling, and browsing NFT-backed fashion drops. \
   - **The Protocol (Infra Layer)**: A permissionless, modular infrastructure for NFC + NFT linking, drop registration, and revenue splits.
 
   This dual design enables plug-and-play compatibility for future fashion brands, studios, and partners who want to onboard independently into the Funtend ecosystem.
