Standardize title and description formatting across multiple documentation files

--- a/appendix/final-notes.mdx
+++ b/appendix/final-notes.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Final Notes'
-description: 'Vision, Gratitude, and Call to Action'
+title: "Final Notes"
+description: "Vision, Gratitude, and Call to Action"
 ---
 
 Funtend is more than a product—it’s a movement toward a more open, creative, and verifiable fashion future. By bridging physical garments with onchain identity, empowering creators with AI, and embedding NFTs and DePIN at the core of the experience, we aim to spark a global cultural shift in how fashion is made, owned, and experienced.
