--- a/community/community-and-partnerships.mdx
+++ b/community/community-and-partnerships.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Community and Partnerships'
-description: 'Building an inclusive creator economy, together'
+title: "Community and Partnerships"
+description: "Building an inclusive creator economy, together"
 ---
 
 Funtend thrives on collaboration. From fashion designers and Web3 collectors to protocol partners and local communities, we’re cultivating an ecosystem that grows stronger through shared ownership and creativity.
