--- a/development/roadmap.mdx
+++ b/development/roadmap.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Roadmap'
-description: 'Key milestones on the path to decentralized fashion innovation'
+title: "Roadmap"
+description: "Key milestones on the path to decentralized fashion innovation"
 ---
 
 Funtend’s roadmap outlines our strategic development across technical, community, and commercial pillars. Each phase is designed to deliver meaningful value, validate our ecosystem, and onboard the next wave of creators and users.
