--- a/introduction/problem.mdx
+++ b/introduction/problem.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Problem Statement'
-description: 'The broken systems behind fashion: waste, counterfeits, and disconnected creators'
+title: "Problem Statement"
+description: "The broken systems behind fashion: waste, counterfeits, and disconnected creators"
 ---
 
 The global fashion industry, valued at over $1.7 trillion, faces systemic problems that affect everyone—creators, consumers, and brands:
