--- a/introduction/solution.mdx
+++ b/introduction/solution.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Our Solution'
-description: 'Funtend bridges the gap between digital creation and physical fashion'
+title: "Our Solution"
+description: "Funtend bridges the gap between digital creation and physical fashion"
 ---
 
 Funtend offers a vertically integrated Web3 fashion platform that empowers creators, protects authenticity, and brings digital fashion into the real world. Our solution sits at the intersection of **AI-powered design**, **DePIN infrastructure**, and **Polygon-backed NFTs**, allowing us to unlock an entirely new experience for how fashion is made, owned, and traded.
