--- a/legal/legal-and-risk-considerations.mdx
+++ b/legal/legal-and-risk-considerations.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Legal and Risk Considerations'
-description: 'Mitigating regulatory, technical, and operational risks'
+title: "Legal and Risk Considerations"
+description: "Mitigating regulatory, technical, and operational risks"
 ---
 
 Funtend operates at the intersection of digital assets, physical goods, and decentralized infrastructure. With this innovation comes a set of unique legal and regulatory challenges that we proactively address to protect users, partners, and the long-term sustainability of the platform.
