--- a/platform/ecosystem-strategy.mdx
+++ b/platform/ecosystem-strategy.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Ecosystem Strategy'
-description: 'Funtend is building a modular and scalable creator-commerce ecosystem'
+title: "Ecosystem Strategy"
+description: "Funtend is building a modular and scalable creator-commerce ecosystem"
 ---
 
 Funtend’s strategy centers around creating a self-sustaining, interoperable, and community-driven ecosystem that blends fashion, blockchain, and AI. We approach this through layered systems that grow together—from creation tools to resale markets, community rewards, and protocol-level utility.
