--- a/platform/governance.mdx
+++ b/platform/governance.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Governance'
-description: 'Decentralized decision-making for a community-driven fashion future'
+title: "Governance"
+description: "Decentralized decision-making for a community-driven fashion future"
 ---
 
 Funtend’s governance model empowers token holders and key stakeholders to shape the platform’s evolution transparently and democratically.
