--- a/platform/revenue-model.mdx
+++ b/platform/revenue-model.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Revenue Model'
-description: 'Multi-stream monetization aligned with creators, collectors, and platform growth'
+title: "Revenue Model"
+description: "Multi-stream monetization aligned with creators, collectors, and platform growth"
 ---
 
 Funtend generates revenue through a diversified, scalable model designed to grow alongside its user base while maintaining alignment with creators and communities.
