--- a/platform/tokenomics.mdx
+++ b/platform/tokenomics.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Tokenomics (FNTD)'
-description: 'Powering the Funtend ecosystem with utility, rewards, and governance'
+title: "Tokenomics (FNTD)"
+description: "Powering the Funtend ecosystem with utility, rewards, and governance"
 ---
 
 The $FNTD token is the backbone of Funtend’s economy, designed to incentivize participation, reward meaningful contributions, and govern the future of the platform.
