--- a/platform/user-journey.mdx
+++ b/platform/user-journey.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'User Journey'
-description: 'From inspiration to ownership—Funtend guides creators and collectors every step of the way'
+title: "User Journey"
+description: "From inspiration to ownership—Funtend guides creators and collectors every step of the way"
 ---
 
 The Funtend experience is built for both fashion creators and consumers. Each journey is designed to be intuitive, rewarding, and powered by Web3 tools that remain invisible until they’re needed. Below is a step-by-step breakdown of the typical user flow for both roles.
